--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -52,6 +52,23 @@
     padding-right: 5px;
 }
 
+.message-username-recieve{
+    color: rgb(93, 93, 93);
+    text-align: left;
+    padding-left: 45px;
+    padding-bottom: 5px;
+    font-weight: 500;
+}
+
+.message-username-send{
+    color: rgb(93, 93, 93);
+    text-align: right;
+    padding-right: 23px;
+    padding-bottom: 5px;
+    font-weight: 500;
+
+}
+
 .message-spacer {
     flex: 1;
 }
