--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -58,6 +58,9 @@
     padding-left: 45px;
     padding-bottom: 5px;
     font-weight: 500;
+    display: flex;
+    align-items: center;
+
 }
 
 .message-username-send{
@@ -66,7 +69,15 @@
     padding-right: 23px;
     padding-bottom: 5px;
     font-weight: 500;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
 
+.options{
+    height: 20px;
+    padding: 0 10px;
+    cursor: pointer;
 }
 
 .message-spacer {
